--- a/web model.css
+++ b/web model.css
@@ -1,25 +1,25 @@
 *{
     margin: 0px;
-    padding: opx;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
 .navbar{
-    width: 1200px;
-    height: 75px;
+    width: 100%;
+    height: 90px;
     margin: auto;
-}
-.icon{
-    width: 200px
-    font: left;
-    height: 70px;
+    
+    padding: 0px 300px;
 }
 .logo{
     color: orangered;
     font-size: 35px;
     font-family: Arial;
-    padding-left: 50px;
+    padding-right:100px; 
     float: left;
-    padding: 50px;
+    padding: 30px;
+    font-weight: bold;
+    display: inline-block;
 }
 .menu{
     width: 400px;
@@ -32,12 +32,15 @@ ul{
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 ul li{
     list-style: none;
     margin-left: 70px;
-    margin-bottom:px;
+    margin-bottom:0px;
+    padding-top: 40px;
     font-size: 15px;
+    display: inline-block;
 }
 ul li a{
     text-decoration: none;
@@ -45,8 +48,18 @@ ul li a{
     font-family:Arial;
     font-weight: bold;
     transition: 0.4s ease-in-out;
+    padding-top: 50px;
 }
 ul li a:hover{
     color: orangered;
 }
+ body{
+    background:url('golden-sunset-hd-backgrounds-captivatings-for-serene-scenes-photo.jpg')no-repeat center center/cover;
+    height: 100vh;
     
+ }   
+ .Dropdown-content{
+    display: none;
+    position: absolute;
+    
+ }
